responsive layout bug fixes

--- a/front-end/src/RecipeEditor.css
+++ b/front-end/src/RecipeEditor.css
@@ -53,7 +53,7 @@ body {
 
 .submit {
     font-size: 4rem;
-    width: 15%;
+    width: 200px;
     max-width: 300px;
     height: 6rem;
     margin: 3rem auto 2rem auto;
@@ -121,17 +121,27 @@ body {
     }
  
 }
+@media only screen and (min-width: 601px) and (max-width:808px){
+    .title{
+        font-size: clamp(8rem, 10vw, 10rem);
+    }
+}
 
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
     .submit{
-        width: 170px;
+        width: 190px;
         height: 5rem;
         margin-top:15rem;
         margin-bottom: 10rem;
         box-shadow: #3988A4 55px -10px 0px, #67C2D4 -70px 10px 0px, #CB625F 0px 30px 0px;
     }
-    h1{
-        font-size: 8rem;
+    .asideContainer{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .aside{
+        width:100%;
     }
 
 }
