--- a/front-end/src/style/ImageBox.module.css
+++ b/front-end/src/style/ImageBox.module.css
@@ -7,6 +7,7 @@
     align-items: center;
     position: relative;
     box-sizing: border-box;
+    margin:0 auto;
 }
 .placeholder {
     width: 100%;
