--- a/front-end/src/style/Ingredients.module.css
+++ b/front-end/src/style/Ingredients.module.css
@@ -52,12 +52,14 @@
     .container {
         width: 100%;
         justify-content: space-between;
-        column-gap: 5rem;
+        row-gap: 8rem;
+        flex-direction: column;
     }
     .ingredients {
-        width: 50%;
+        width: 100%;
     }
     .imageContainer {
-        width: 50%;
+        align-self: center;
+        width:80%;
     }
 }
