--- a/front-end/src/style/InstructionsItem.module.css
+++ b/front-end/src/style/InstructionsItem.module.css
@@ -153,13 +153,18 @@ input::file-selector-button{
         box-shadow: #67C2D4 15px 15px 0px;
     }
     .container{
-        position: relative;
         row-gap: 1rem;
     }
     .label, .shadow {
         font-size: 1.2rem;
         height: 40px;
 
+    }
+    .textarea{
+        column-gap:2rem;
+    }
+    .buttonContainer{
+        width: 10rem;
     }
 }
 
