--- a/front-end/src/style/TitleDescription.module.css
+++ b/front-end/src/style/TitleDescription.module.css
@@ -11,13 +11,13 @@
     row-gap: 10rem;
 }
 .imageContainer {
-    width: 50%;
+    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
     .container{
         flex-direction: column;
         align-items: center;
@@ -32,16 +32,19 @@
         width: 80%;
     }
 }
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
+@media only screen and (min-width: 800px) and (max-width: 1024px) {
     .container {
         width: 100%;
         justify-content: space-between;
-    }
-    .titleDescription {
-        width: 50%;
+        flex-direction: column;
+        align-items: center;
         row-gap:5rem;
     }
+    .titleDescription {
+        row-gap:5rem;
+        width:90%;
+    }
     .imageContainer {
-        width: 40%;
+        width: 80%;
     }
 }
